--- a/.github/workflows/create.yml
+++ b/.github/workflows/create.yml
@@ -22,6 +22,11 @@ jobs:
           if ! gh repo view "${{ inputs.repo_owner }}/${{ inputs.repo_name }}" >/dev/null 2>&1; then
             gh repo create "${{ inputs.repo_owner }}/${{ inputs.repo_name }}" --public
           fi
+      # TODO fetch repo if it exists
+      # and add origin and fetch new things
+      # then maybe repack and push
+      # do this via a schedule
+      # but if repo doesn't exist don't do the schedule thing, let it be dead.
       - name: fetch nixpkgs
         run: |
           mkdir -p nixpkgs.git
